refactor: centralize Google OAuth configuration with `GoogleResourceConfigBuilder`, remove redundant `profile` usage, and introduce `GoogleCredentialsException` for error handling