@@ -12,6 +12,8 @@ import lombok.extern.slf4j.Slf4j;
 import org.phong.zenflow.plugin.subdomain.execution.dto.ExecutionResult;
 import org.phong.zenflow.plugin.subdomain.execution.interfaces.PluginNodeExecutor;
 import org.phong.zenflow.plugin.subdomain.node.registry.PluginNode;
+import org.phong.zenflow.plugin.subdomain.nodes.builtin.integration.google.core.GoogleCredentialsException;
+import org.phong.zenflow.plugin.subdomain.nodes.builtin.integration.google.core.GoogleResourceConfigBuilder;
 import org.phong.zenflow.plugin.subdomain.nodes.builtin.integration.google.docs.GoogleDocsServiceManager;
 import org.phong.zenflow.plugin.subdomain.resource.ScopedNodeResource;
 import org.phong.zenflow.workflow.subdomain.context.ExecutionContext;
@@ -45,22 +47,11 @@ public class GoogleDocsAddHeaderExecutor implements PluginNodeExecutor {
         NodeLogPublisher logCollector = context.getLogPublisher();
         try {
             Map<String, Object> input = config.input();
-            String profile = (String) input.get("profile");
             String documentId = (String) input.get("documentId");
             String text = (String) input.getOrDefault("text", "");
 
-            @SuppressWarnings("unchecked")
-            Map<String, Map<String, String>> profileMap = context.read("profiles", Map.class);
-            Map<String, String> credentials = profileMap.get(profile);
-            String clientId = credentials.get("CLIENT_ID");
-            String clientSecret = credentials.get("CLIENT_SECRET");
-            String refreshToken = credentials.get("REFRESH_TOKEN");
-
-            Map<String, Object> cfg = new HashMap<>();
-            cfg.put("clientId", clientId);
-            cfg.put("clientSecret", clientSecret);
-            cfg.put("refreshToken", refreshToken);
-            DefaultTriggerResourceConfig resourceConfig = new DefaultTriggerResourceConfig(cfg, "refreshToken");
+            DefaultTriggerResourceConfig resourceConfig = GoogleResourceConfigBuilder.build(context);
+            String refreshToken = resourceConfig.getResourceIdentifier();
 
             try (ScopedNodeResource<Docs> handle =
                          docsServiceManager.acquire(refreshToken, context.getWorkflowRunId(), resourceConfig)) {
@@ -69,7 +60,7 @@ public class GoogleDocsAddHeaderExecutor implements PluginNodeExecutor {
                 Request createHeader = new Request().setCreateHeader(new CreateHeaderRequest());
                 BatchUpdateDocumentResponse response = docs.documents().batchUpdate(documentId,
                         new BatchUpdateDocumentRequest().setRequests(List.of(createHeader))).execute();
-                String headerId = response.getReplies().get(0).getCreateHeader().getHeaderId();
+                String headerId = response.getReplies().getFirst().getCreateHeader().getHeaderId();
 
                 if (text != null && !text.isEmpty()) {
                     InsertTextRequest insert = new InsertTextRequest()
@@ -85,10 +76,12 @@ public class GoogleDocsAddHeaderExecutor implements PluginNodeExecutor {
                 output.put("headerId", headerId);
                 return ExecutionResult.success(output);
             }
+        } catch (GoogleCredentialsException e) {
+            logCollector.withException(e).error("Google credential error: {}", e.getMessage());
+            return ExecutionResult.error(e.getMessage());
         } catch (Exception e) {
             logCollector.withException(e).error("Google Docs add header failed: {}", e.getMessage());
             return ExecutionResult.error(e.getMessage());
         }
     }
 }
-
